Fix tooltip overflow. Pass diploma id as parameter.

--- a/src/css/3party/canvas-uob.less
+++ b/src/css/3party/canvas-uob.less
@@ -261,7 +261,7 @@ Her er fargene Lisbeth foreslår
   display: block;
   padding: 18px 18px;
   max-height: 0;
-  overflow: hidden;
+/*  overflow: hidden;*/
   transition: max-height 0.2s ease-out;
 }
 .uob-accordion-panel {
