--- a/src/css/modules/allcourseslist.less
+++ b/src/css/modules/allcourseslist.less
@@ -44,40 +44,6 @@
   }
 }
 
-// TODO: move to a separate file when buttons are refactored
-.mmooc-button {
-  padding: 12px 24px;
-  border: none;
-  border-radius: 4px;
-  font-family: Roboto;
-  font-size: 14px;
-  color: @white;
-  outline: none;
-  text-align: center;
-  cursor: pointer;
-
-  span {
-    text-decoration: none;
-
-    &:last-child {
-      display: none;
-    }
-  }
-
-  &:hover,
-  &:focus,
-  &:active {
-    text-decoration: none;
-
-    span {
-      text-decoration: none !important;
-
-      &:last-child {
-        display: none;
-      }
-    }
-  }
-}
 
 .mmooc-loader-wrapper {
   span {
@@ -86,19 +52,4 @@
   }
 }
 
-.mmooc-button-primary {
-  background-color: @darkTealColor;
-  width:100px;
-  background-image: url(https://server/vector_images/Horisontal-hvit_Feide.svg);
-  background-repeat: no-repeat;
-  background-size: contain;
-  background-origin: content-box;
-}
 
-.mmooc-button-secondary {
-  border-color: @darkTealColor;
-  border-style: solid;
-  border-width: 1px;
-  color: @darkTealColor;
-  padding-top: 17px;
-}
