--- a/src/css/modules/loginPopup.less
+++ b/src/css/modules/loginPopup.less
@@ -33,7 +33,7 @@
   }
 
   &__text {
-    font-family: Roboto;
+    font-family: Arial;
     font-size: 20px;
     color: @textColor;
     letter-spacing: 0;
@@ -75,7 +75,7 @@
     justify-content: center;
     align-items: center;
     color: @white;
-    font-family: Roboto Bold;
+    font-family: Arial Bold;
     font-size: 14px;
     letter-spacing: 0;
     line-height: 24px;
@@ -107,4 +107,55 @@
     background-repeat: no-repeat;
     background-position: center center;
   }
+}
+// TODO: move to a separate file when buttons are refactored
+.mmooc-button {
+  padding: 12px 24px;
+  border: none;
+  border-radius: 4px;
+  font-family: Arial;
+  font-size: 14px;
+  color: @white;
+  outline: none;
+  text-align: center;
+  cursor: pointer;
+
+  span {
+    text-decoration: none;
+
+    &:last-child {
+      display: none;
+    }
+  }
+
+  &:hover,
+  &:focus,
+  &:active {
+    text-decoration: none;
+
+    span {
+      text-decoration: none !important;
+
+      &:last-child {
+        display: none;
+      }
+    }
+  }
+}
+
+.mmooc-button-primary {
+  background-color: @darkTealColor;
+  width:100px;
+  background-image: url(https://server/vector_images/Horisontal-hvit_Feide.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-origin: content-box;
+}
+
+.mmooc-button-secondary {
+  border-color: @darkTealColor;
+  border-style: solid;
+  border-width: 1px;
+  color: @darkTealColor;
+  padding-top: 17px;
 }
